--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.3.2",
+    "core-js": "^3.4.1",
+    "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "json-bigint": "^0.3.0",
     "nprogress": "^0.2.0",
